k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scheduler-app
  labels:
    name: scheduler-app
    app: job-scheduler
